--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify-json/heroicons": "^1.2.0",
+    "@mdi/font": "^7.4.47",
     "@nuxt/eslint": "^0.4.0",
+    "@nuxt/image": "^1.8.0",
     "@nuxt/ui": "^2.18.2",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@vueuse/core": "^11.0.3",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
@@ -21,6 +25,7 @@
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.7"
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   }
 }
