--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@vueuse/core": "^11.0.3",
     "nuxt": "^3.12.4",
-    "vue": "latest",
-    "zod": "^3.23.8"
+    "vue": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
