--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@nuxt/ui": "^2.18.2",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@vueuse/core": "^11.0.3",
+    "date-fns": "^3.6.0",
     "nuxt": "^3.12.4",
+    "v-calendar": "^3.1.2",
     "vue": "latest"
   },
   "devDependencies": {
